--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,10 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Dependencies
 node_modules
 dist
-dist-ssr
+dist-electron
 *.local
 
 # Editor directories and files
@@ -22,3 +23,14 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Electron
+release
+app/dist
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Backup
+_tauri
