--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -11,14 +11,14 @@
     "typecheck:node": "tsc --noEmit -p tsconfig.node.json --composite false",
     "typecheck:web": "tsc --noEmit -p tsconfig.web.json --composite false",
     "typecheck": "npm run typecheck:node && npm run typecheck:web",
-    "start": "electron-vite --config ./vite.config.ts preview",
-    "dev": "electron-vite --config ./vite.config.ts dev",
+    "start": "electron-vite preview",
+    "dev": "electron-vite dev",
     "build": "npm run typecheck && electron-vite build",
     "postinstall": "electron-builder install-app-deps",
     "build:unpack": "npm run build && electron-builder --dir",
     "build:win": "npm run build && electron-builder --win",
-    "build:mac": "electron-vite --config ./vite.config.ts build && electron-builder --mac",
-    "build:linux": "electron-vite --config ./vite.config.ts build && electron-builder --linux"
+    "build:mac": "electron-vite build && electron-builder --mac",
+    "build:linux": "electron-vite build && electron-builder --linux"
   },
   "dependencies": {
     "@electron-toolkit/preload": "^3.0.2",
