--- a/electron-app/electron-builder.yml
+++ b/electron-app/electron-builder.yml
@@ -5,7 +5,7 @@ directories:
 files:
   - '!**/.vscode/*'
   - '!src/*'
-  - '!vite.config.{js,ts,mjs,cjs}'
+  - '!electron.vite.config.{js,ts,mjs,cjs}'
   - '!{.eslintcache,eslint.config.mjs,.prettierignore,.prettierrc.yaml,dev-app-update.yml,CHANGELOG.md,README.md}'
   - '!{.env,.env.*,.npmrc,pnpm-lock.yaml}'
   - '!{tsconfig.json,tsconfig.node.json,tsconfig.web.json}'
